--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -42,8 +43,10 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.6.2",
     "react": "^16.6.0",
     "react-app-polyfill": "^0.1.3",
+    "react-bulma-components": "^2.2.0",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.0",
     "react-feather": "^1.1.4",
@@ -54,6 +57,7 @@
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.2",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
